--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -96,6 +96,7 @@
   background: #060247;
   width: 40px;
   height: 40px;
+  border: none;
 }
 .ModalFavorieButton{
  width: 30px;
@@ -180,13 +181,14 @@ font-size: 14px;
   height: 50px;
   opacity: 0.6;
   padding: 5px;
-    cursor: pointer;
-      display: flex;
+  cursor: pointer;
+  display: flex;
   align-items: center;
   justify-content: center;
   position: fixed;
   top: 5.5%;
   right: 20.2%;
+  border: none;
 }
 .CloseModalButton svg{
   width: 60px;
