--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
 #root {
-  width: 100%;
+  max-width: 1280px;
   margin: 0 auto;
-  padding: 0;
+  padding: 2rem;
 }
-body{
-  width: 100%;
-}
+
 .logo {
   height: 6em;
   padding: 1.5em;
